# haira

./: .AI_RULES.md  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/haira-ai/: Cargo.toml
crates/haira-ai/src/: cache.rs  client.rs  config.rs  engine.rs  lib.rs  ollama.rs  prompt.rs
crates/haira-ai/src/hif/: inference.rs  mod.rs  parser.rs  types.rs  writer.rs
crates/haira-ast/: Cargo.toml
crates/haira-ast/src/: ast.rs  lib.rs  span.rs
crates/haira-cir/: Cargo.toml
crates/haira-cir/src/: function.rs  lib.rs  operations.rs  types.rs  validation.rs
crates/haira-cli/: Cargo.toml
crates/haira-cli/src/: main.rs
crates/haira-cli/src/commands/: build.rs  check.rs  info.rs  interpret.rs  lex.rs  mod.rs  model.rs  parse.rs  run.rs
crates/haira-codegen/: Cargo.toml
crates/haira-codegen/src/: cir_to_ast.rs  compiler.rs  lib.rs  runtime.c  runtime.rs
crates/haira-driver/: Cargo.toml
crates/haira-driver/src/: lib.rs
crates/haira-hir/: Cargo.toml
crates/haira-hir/src/: lib.rs
crates/haira-lexer/: Cargo.toml
crates/haira-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
crates/haira-local-ai/: Cargo.toml
crates/haira-local-ai/src/: client.rs  error.rs  lib.rs  model.rs  paths.rs  server.rs
crates/haira-lsp/: Cargo.toml
crates/haira-lsp/src/: analysis.rs  completion.rs  diagnostics.rs  hover.rs  main.rs  symbols.rs
crates/haira-mir/: Cargo.toml
crates/haira-mir/src/: lib.rs
crates/haira-parser/: Cargo.toml
crates/haira-parser/src/: error.rs  lib.rs  parser.rs
crates/haira-resolver/: Cargo.toml
crates/haira-resolver/src/: lib.rs
crates/haira-runtime/: Cargo.toml
crates/haira-runtime/src/: concurrency.rs  env.rs  error.rs  io.rs  lib.rs  math.rs  memory.rs  regex.rs  strings.rs  testing.rs  time.rs
crates/haira-types/: Cargo.toml
crates/haira-types/src/: lib.rs
examples/: ai_intent.haira  ai_math.haira  ai_minimal.haira  ai_simple.haira  ai_simple_compiled.haira  ai_validation.haira  arrays.haira  async.haira  async_block.haira  concurrency.haira  fibonacci.haira  hello.haira  if_else.haira  lambda.haira  match.haira  match_simple.haira  methods.haira  pipe.haira  spawn.haira  spawn_block.haira  test_features.haira  test_for.haira  test_if.haira  test_while2.haira
examples/advanced/: cli-tool.haira  data-processing.haira  errors.haira  web-api.haira
examples/ai/: ai_functions.haira  ai_int_test.haira  ai_intent.haira  ai_minimal.haira  ai_simple_math.haira
examples/basics/: hello.haira  simple_func.haira  test_simple.haira
examples/control-flow/: for_loop.haira  test_while.haira
examples/data-types/: interpolation.haira  option.haira  structs.haira
examples/functions/: functions.haira
examples/testing/: basic_tests.haira  function_tests.haira  math_tests.haira  simple_test.haira  string_tests.haira
spec/: 01-overview.md  02-lexical-structure.md  03-types.md  04-expressions.md  05-statements.md  06-functions.md  07-error-handling.md  08-concurrency.md  09-modules.md  10-standard-library.md  11-auto-generation.md  12-grammar.md  13-compiler-architecture.md  14-implementation-plan.md  15-ai-integration.md
