[workspace]
resolver = "2"
members = [
    "crates/haira-lexer",
    "crates/haira-parser",
    "crates/haira-ast",
    "crates/haira-resolver",
    "crates/haira-ai",        # AI intent engine (Claude integration)
    "crates/haira-cir",       # Canonical IR definitions
    "crates/haira-types",
    "crates/haira-hir",
    "crates/haira-mir",
    "crates/haira-codegen",
    "crates/haira-driver",
    "crates/haira-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/haira-lang/haira"
authors = ["Haira Contributors"]

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
logos = "0.14"
chumsky = "0.9"
ariadne = "0.4"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
indexmap = "2.1"
rustc-hash = "1.1"
smol_str = "0.2"
la-arena = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP/Async for AI integration
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Internal crates
haira-lexer = { path = "crates/haira-lexer" }
haira-parser = { path = "crates/haira-parser" }
haira-ast = { path = "crates/haira-ast" }
haira-resolver = { path = "crates/haira-resolver" }
haira-ai = { path = "crates/haira-ai" }
haira-cir = { path = "crates/haira-cir" }
haira-types = { path = "crates/haira-types" }
haira-hir = { path = "crates/haira-hir" }
haira-mir = { path = "crates/haira-mir" }
haira-codegen = { path = "crates/haira-codegen" }
haira-driver = { path = "crates/haira-driver" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compile times for development
opt-level = 0
debug = true
