[package]
name = "haira-lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lexer/tokenizer for the Haira programming language"

[dependencies]
logos.workspace = true
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta = "1.34"
