[package]
name = "haira-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Name resolution for the Haira programming language"

[dependencies]
haira-ast.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
